--- a/RogueliteNpcScripts/RogueliteNpcScripts/RogueliteNpcScripts.csproj
+++ b/RogueliteNpcScripts/RogueliteNpcScripts/RogueliteNpcScripts.csproj
@@ -42,9 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Test.cs" />
+    <Compile Include="BlacksmithShopkeeper.cs" />
+    <Compile Include="Guide.cs" />
+    <Compile Include="PotionShopkeeper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ScriptingFramework\ScriptingFramework.csproj">
